# payment-manager

./: .gitignore  Anchor.toml  Makefile  generate-idls.sh  index.html  modules.html  package.json  tsconfig.json
assets/: search.js
functions/: accounts.getAllPaymentManagers.html  accounts.getPaymentManager.html  accounts.getPaymentManagers.html  instruction.close.html  instruction.handleNativePaymentWithRoyalties.html  instruction.handlePaymentWithRoyalties.html  instruction.init.html  instruction.managePayment.html  instruction.update.html  paymentManagerProgram.html  pda.findPaymentManagerAddress.html  transaction.withClose.html  transaction.withHandleNativePaymentWithRoyalties.html  transaction.withHandlePaymentWithRoyalties.html  transaction.withInit.html  transaction.withManagePayment.html  transaction.withUpdate.html
modules/: accounts.html  instruction.html  pda.html  transaction.html
program/: Cargo.toml
programs/solana-nft-programs-payment-manager/: Cargo.toml
programs/solana-nft-programs-payment-manager/src/: lib.rs
programs/solana-nft-programs-payment-manager/src/instructions/: handle_native_payment_with_royalties.rs  handle_payment_with_royalties.rs  mod.rs
scripts/: generate-idls-types.sh
sdk/: accounts.ts  constants.ts  instruction.ts  pda.ts  transaction.ts  utils.ts
tests/: handleNativePaymetWithRoyaltiesWithBuySideReceiverAndSellerFee.spec.ts  handleNativePaymetWithRoyaltiesWithBuySideReceiverAndSellerFee.test.ts  handlePaymetWithRoyalties.spec.ts  handlePaymetWithRoyaltiesNoMetadata.spec.ts  handlePaymetWithRoyaltiesNoMetadata.test.ts  (+10 more)
(+25 files in other folders)
