[package]
name = "solana-nft-programs-payment-manager"
version = "1.0.0"
description = "Payment manager"
edition = "2021"
repository = "https://github.com/solana-nft-programs/payment-manager/"
license = "AGPL-3.0"
keywords = ["solana", "payment-manager"]

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_nft_programs_payment_manager"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = "0.26.0"
spl-associated-token-account = "1.1.2"
mpl-token-metadata = { version = "1.8.0", features = ["no-entrypoint"] }
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
solana-program = "1.10.29"

[dev-dependencies]
proptest = { version = "1.0" }